--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,11 @@
+.card-body{
+    text-align: center;
+}
 
 /* 
 
     You can write your own styles here...
-    
+
     
     ...Or you can use the import command to include 
     other sylesheets into your bunde as well, e.j:
